src/client/styles/MenuStyles.scss
@import url('https://fonts.googleapis.com/css?family=Fira+Sans+Extra+Condensed');


/*********************************************************
********************** LOGIN/SIGNUP **********************
*********************************************************/


.grid {
  margin-left: auto;
  margin-right: auto;
  max-width: 25rem;
  width: 100%;
}

.hidden {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

* {
  box-sizing: inherit;
}

html {
  box-sizing: border-box;
  font-size: 2vh;
}

body {
  background-image: url("https://s3-us-west-1.amazonaws.com/namethatcard/Background/ntc-homescreen.jpg");
  background-size: cover;
  background-position: center;
  color: white;
  font-family: 'Fira Sans Extra Condensed', sans-serif;
  font-size: 1em;
  font-weight: 400;
  height: 100%;
  line-height: 1.8em;
  margin: 0;
  max-height: 100%;
}

a {
  color: white;
  outline: 0;
  text-decoration: none;
}

// a:focus,
// a:hover {
//   text-decoration: underline;
// }

input {
  border: 0;
  color: inherit;
  font: inherit;
  margin: 0;
  outline: 0;
  padding: 0;
  transition: background-color 0.3s;
}

input[type='button'] {
  cursor: pointer;
}

.form {
  margin: -0.875rem;
}

.form input[type='password'],
.form input[type='text'],
.form input[type='email'],
.form input[type='button'] {
  width: 100%;
}

.form__field {
  display: flex;
  margin: 0.875rem;
}

.form__input {
  flex: 1;
}

.login {
  color: white;
}

.login label,
.login input[type='text'],
.login input[type='email'],
.login input[type='password'],
.login input[type='button'] {
  border-radius: 0.5em;
  padding: 1rem;
}

.login input[type='password'],
.login input[type='text'],
.login input[type='email'] {
  background-color: #363b41;
}

.login input[type='password']:focus,
.login input[type='password']:hover,
.login input[type='text']:focus,
.login input[type='text']:hover,
.login input[type='email']:focus,
.login input[type='email']:hover {
  background-color: #434a52;
}

.login input[type='button'] {
  background-color: black;
  color: #eee;
  font-weight: 700;
  text-transform: uppercase;
  border: 0.08em solid white;
}

.login input[type='button']:focus,
.login input[type='button']:hover {
  background-color: #434a52;
}

p {
  margin-bottom: 1.5rem;
  margin-top: 1.5rem;
}

.text--center {
  text-align: center;
  margin-left: auto;
  margin-right: auto;
  margin-top: 5.5vh;
  text-shadow: 0 0 1em white;
}

.error-text {
  padding-left: 5vw;
  margin-left: auto;
  margin-right: auto;
  color: white;
}

.chooseCategories--text--center {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  text-shadow: 0 0 1em white;
  grid-row-start: 2;
  grid-row-end: 3;
}

.chooseDifficulty--text--center {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  text-shadow: 0 0 1em white;
  grid-row-start: 5;
  grid-row-end: 6;
}

.gameMenuLoginPrompt--text--center {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  font-size: 1.4em;
  text-shadow: 0 0 1em white;
  grid-row-start: 8;
}

.homeLoginPrompt--text--center {
  display: flex;
  position: relative;
  bottom: 4vh;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  font-size: 1.4em;
  text-shadow: 0 0 1em white;
  grid-row-start: 4;
}

.results-container {
  margin-top: 12vh;
}

.result--center {
  text-align: center;
  margin-left: auto;
  margin-right: auto;
  margin-top: 2.5vh;
  margin-bottom: 2.5vh;
  text-shadow: 0 0 1em white;
}

.resultHeader--center {
  text-align: center;
  margin-left: auto;
  margin-right: auto;
  margin-top: 2.5vh;
  margin-bottom: 2.5vh;
  font-size: 2.5em;
  text-shadow: 0 0 1em white;
}

.leaderboardTitle {
  text-align: center;
  margin-left: auto;
  margin-right: auto;
  margin-top: 4vh;
  margin-bottom: 0vh;
  text-shadow: 0 0 1em white;
  font-size: 1.6em;
}

.pick-a-game {
  position: relative;
  top: 7vh;
  margin-left: auto;
  margin-right: auto;
  font-size: 2em;
  text-shadow: 0 0 1em white;
  grid-row-start: 1;
  grid-row-end: 2;
}

.text--left {
  margin-top: 2.5vh;
  margin-bottom: 2.5vh;
  text-shadow: 0 0 1em white;
}

.socialmedia--center {
  display: flex;
  justify-content: center;
  margin: auto;
}


/*********************************************************
************************* MENU ***************************
*********************************************************/


// APP CONTAINERS

.HomescreenContainer {
  display: grid;
  grid-template-rows: 10vh 35vh 25vh 5vh;
  height: 75vh;
  max-width: 95vw;
  margin-left: auto;
  margin-right: auto;
}

.UserContainer {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-content: center;
  height: 75vh;
  max-width: 95vw;
  margin-left: auto;
  margin-right: auto;
}

.MenuContainer {
  display: grid;
  grid-template-rows: 5vh 5vh 25vh 10vh 5vh 10vh 10vh 5vh;
  height: 75vh;
  max-width: 95vw;
  margin-left: auto;
  margin-right: auto;
}

.navigation {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-between;
  height: 12.5vh;
  max-width: 95vw;
  margin-left: auto;
  margin-right: auto;
}

.LeaderboardContainer {
  display: flex;
  flex-direction: column;
  align-content: center;
  height: 75vh;
  max-width: 95vw;
  margin-left: auto;
  margin-right: auto;
}

.GameContainer {
  height: 75vh;
  max-width: 95vw;
  margin: auto;
  display: grid;
  grid-template-rows: 40vh 22vh 10vh;
}

.footerContainer {
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
  align-items: center;
  height: 12.5vh;
  max-width: 95vw;
  margin-left: auto;
  margin-right: auto;
}

.list {
  display: flex;
  // height: auto;
  justify-content: center;
  text-align: center;
  flex-direction: row;
  flex-wrap: wrap;
}
/* ... */

